styles/NavBar.module.scss
.navbar {
    width: 100%;
    height: 6rem;
    color: rgb(246, 246, 246);
    display: flex;
    align-items: center;
    justify-content: space-between;
    user-select: none;
    // border-bottom: rgb(203, 0, 0) solid .5rem;
    background-color: rgb(10, 10, 10);

    .logo {
        height: 40px;
        font-size: 2rem;
        margin-left: 2rem;
        cursor: pointer;
        display: flex;
        justify-content: center;
    }

    .hamburger {
        margin-right: 1rem;
        display: flex;
        justify-content: center;
    }

    .navList {
        display: none;
    }
}

@keyframes fade-in {
    0% {
        opacity: 0%;
    }
    100% {
        opacity: 100%;
    }
}

.fade-in {
    animation-name: fade-in;
    animation-duration: 1s;
}

.menu {
    height: 100vh;
    width: 100%;
    background-color: rgb(10, 10, 10);
    overflow: hidden;
    font-size: 40px;

    .list {
        display: flex;
        justify-content: center;
        flex-direction: column;
        align-items: center;
        padding: 0;
        width: 100%;
        height: 80%;
        margin: 0;
        list-style: none;

        .listItem {
            margin: 1.75rem 0;
            cursor: pointer;
            user-select: none;
        }
    }
}

@media only screen and (min-width: 800px) {
    .navbar {
        width: 100%;
        height: 6rem;
        display: flex;
        align-items: center;
        justify-content: space-between;
        user-select: none;

        .logo {
            font-size: 2rem;
            margin-left: 3rem;
            cursor: pointer;
        }
        
        .hamburger {
            display: none;
        }

        .navList {
            display: flex;
            justify-content: center;
            list-style: none;
            margin-right: 3rem;

            .navListItem {
                margin: 0 0 0 4rem;
                cursor: pointer;
                user-select: none;
            }
        }
    }
}

